# AgenticDSL

./: .gitmodules  CMakeLists.txt  build.sh  llm_config.json
.sisyphus/evidence/: task-1-error-output.txt  task-1-model-exists.txt  task-1-test-output.txt  task-4-build-output.txt  task-4-cmake-config.txt
.sisyphus/notepads/agenticdsl-fixes/: learnings.md
docs/: AgenticDSL whitepaper.md  AgenticDSL_AppDevGuide.md  AgenticDSL_AppDevGuide_C++_part.md  AgenticDSL_LibSpec_v3.9.md  AgenticDSL_RTGuide.md  AgenticDSL_Standard_Library_v1.1.md  AgenticDSL_SystemPrompt_v3.6.md  AgenticDSL_contract_template.md  AgenticDSL_developer_guide.md  AgenticDSL_example.md  AgenticDSL_training_guide.md  AgenticDSL_v2.3.md  AgenticDSL_v3.1.md  AgenticDSL_v3.1_supplement.md  AgenticDSL_v3.2.md  AgenticDSL_v3.3.md  AgenticDSL_v3.4.md  AgenticDSL_v3.5.md  AgenticDSL_v3.6.md  AgenticDSL_v3.7.md  AgenticDSL_v3.8.md  AgenticDSL_v3.9.md  AgenticOS_Architecture.md  AgenticOS_Layer0_RefactoringPlan.md  AgenticOS_Layer0_Spec.md  Application_guide.md  DESIGN_v0.md  DESIGN_v1.md  DESIGN_v3.1.md  DSL_Standard_Library_v1.0.md  DSL_discus0.md  DSL_discus0_spec.md  DSL_v0.md  DSL_v1.1.md  DSL_v1.md  Memory_suppliement.md  Roadmap.md  Runtime_implement_guide.md  brain-thinking-spec.md  reference.md  (+5 more)
docs/old/: AgenticDLS_v3.0_vs_v2.3.md  AgenticDSL_v2.3.md  AgenticDSL_v3.0.md  AgenticDSL_v3.0.old.md  DSL_old0.md  DSL_old_spec.md
examples/: agent_example.cpp  agent_example_loop.cpp  agent_loop_example.cpp
examples/agent_basic/: main.cpp  tmp.md  workflow.agent.md
examples/agent_loop/: agent_loop.cpp  initial.md  tmp.md
examples/agent_simple/: initial.md  simple.cpp
include/: .chat4code.json
include/.chat4code/: export_metadata.json
include/agenticdsl/core/: engine.h  executor.h  nodes.h  parser.h  system_nodes.h
include/agenticdsl/dsl/: spec.h  templates.h
include/agenticdsl/llm/: llama_adapter.h  prompt_builder.h
include/agenticdsl/resources/: manager.h
include/agenticdsl/scheduler/: topo_scheduler.h
include/agenticdsl/tools/: registry.h
include/common/: types.h  utils.h
include/exports/: req2.md
lib/math/: add.md
lib/utils/: noop.md
src/common/: utils.cpp
src/common/llm/: llama_adapter.cpp  llama_adapter.h  llama_tool.cpp  llama_tool.h  llm_tool.h
src/common/tools/: registry.cpp  registry.h
src/common/utils/: parser_utils.cpp  parser_utils.h  template_renderer.cpp  template_renderer.h  yaml_json.cpp  yaml_json.h
src/core/: engine.cpp  engine.h  executor.cpp  nodes.cpp  parser.cpp  system_nodes.cpp
src/core/types/: budget.h  common.h  context.h  node.h  resource.h
src/dsl/: spec.cpp  templates.cpp
src/llm/: llama_adapter.cpp  prompt_builder.cpp
src/modules/.chat4code/: export_metadata.json
src/modules/budget/: CMakeLists.txt  budget_controller.cpp  budget_controller.h
src/modules/context/: CMakeLists.txt  context_engine.cpp  context_engine.h
src/modules/executor/: CMakeLists.txt  node.cpp  node_executor.cpp  node_executor.h
src/modules/exports/: req1.md
src/modules/parser/: CMakeLists.txt  markdown_parser.cpp  markdown_parser.h
src/modules/scheduler/: CMakeLists.txt  execution_session.cpp  execution_session.h  resource_manager.cpp  resource_manager.h  topo_scheduler.cpp  topo_scheduler.h
src/modules/system/: CMakeLists.txt  system_nodes.cpp  system_nodes.h
src/modules/trace/: CMakeLists.txt  trace_exporter.cpp  trace_exporter.h
src/resources/: manager.cpp
src/scheduler/: topo_scheduler.cpp
src/tools/: registry.cpp
tests/: CMakeLists.txt  main_test_runner.cpp  test_basic.cpp  test_engine.cpp  test_executor.cpp  test_library_loader.cpp  test_llm_tool.cpp  test_no_llm.cpp  test_parser.cpp  test_path_resolution.cpp  test_prompt_builder.cpp  test_scheduler.cpp  test_tool_registry.cpp
